--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,9 +7,8 @@ header{
     width: 100%;
     margin: 0px;
     padding: 0px;
-     
-
 }
+
 body{
     font-family: 'Source Code Pro', monospace;
     background-image: url("../images/paper.jpg");
@@ -42,6 +41,20 @@ img{
     border-radius: 5px;
     background-color: #d1c8bb;
 }
+
+.footer-container {
+    width: 70%;
+    margin: auto;
+    margin-top:10px;
+    margin-bottom:10px;
+    padding: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: 4px rgb(87, 87, 87) solid;
+    border-radius: 5px;
+    background-color: #999795;
+}
+
 .headerText{
     position: absolute;
     color: black;
